minor fixes
- spelling errors
- made questions wrap since emails were too big

--- a/src/styles/Question.module.scss
+++ b/src/styles/Question.module.scss
@@ -10,7 +10,7 @@ faq-question {
   max-width: 50vw;
   //border: 1rem solid darken($dark-purple, 3);
   box-shadow:inset 0px 0px 0px 10px darken($dark-purple, 3);
-
+  word-wrap: break-word;
   @media screen and (max-width: $screen-mobile-large) {
     max-width: 80vw;
   }
